--- a/views/test.ejs
+++ b/views/test.ejs
@@ -71,7 +71,7 @@
 
 
        <section class="home">
-         <img class="home" src="C:\Users\MSI\Documents\web-development\training\images\albaradie.jpg" alt="">
+         <img class="home" src="\images\albaradie.jpg" alt="">
 
        </section>
 
