--- a/views/test.ejs
+++ b/views/test.ejs
@@ -71,7 +71,7 @@
 
 
        <section class="home">
-         <img class="home" src="\images\albaradie.jpg" alt="">
+         <img class="home" src="\images\albaradie.jpg" loading="lazy"  height="300px"alt="">
 
        </section>
 
@@ -85,7 +85,8 @@
 
                      <div class="row" >
                        <div class="column ">
-                         <img class="imgleft d-block" src="\images\aboutusbackground.jpg" alt="Snow" style="width:100%">
+                         <img src="\images\albaradie.jpg" loading="lazy" class="imgleft d-block w-100" alt="...">
+                         <img class="imgleft d-block" loading="lazy" src="\images\aboutusbackground.jpg" alt="Snow" style="width:100%">
                        </div>
                        <div class="column">
                  <h1> أحود أنواع خشب الزان </h1>
@@ -96,10 +97,10 @@
 
                  </div>
              <div class="carousel-item active section-1">
-               <img src="\images\albaradie.jpg" class="imgleft d-block w-100" alt="...">
+               <img src="\images\albaradie.jpg"loading="lazy" class="imgleft d-block w-100" alt="...">
              </div>
              <div class="carousel-item section-1">
-               <img src="images/room.jpg" class="imgleft d-block w-100" alt="...">
+               <img src="images/room.jpg" loading="lazy" class="imgleft d-block w-100" alt="...">
              </div>
            </div>
            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
@@ -125,7 +126,7 @@
 
                      <div class="row" >
                        <div class="column ">
-                         <img class="imgleft d-block" src="\images\aboutusbackground.jpg" alt="Snow" style="width:100%">
+                         <img class="imgleft d-block" loading="lazy" src="\images\aboutusbackground.jpg" alt="Snow" style="width:100%">
                        </div>
                        <div class="column1">
                  <h1>
@@ -142,10 +143,10 @@
 
                  </div>
              <div class="carousel-item active section-1">
-               <img src="\images\albaradie.jpg" class="imgleft d-block w-100" alt="...">
+               <img src="\images\albaradie.jpg" loading="lazy" class="imgleft d-block w-100" alt="...">
              </div>
              <div class="carousel-item section-1">
-               <img src="images/room.jpg" class="imgleft d-block w-100" alt="...">
+               <img src="images/room.jpg"loading="lazy" class="imgleft d-block w-100" alt="...">
              </div>
            </div>
            <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-bs-slide="prev">
@@ -164,11 +165,11 @@
 
 
        <div id ="more">
-         <img src="\images\mountain.png" style="margin:-100px;   opacity:0.8" alt="">
+         <img src="\images\mountain.png" loading="lazy"style="margin:-100px;   opacity:0.8" alt="">
 
        <div id="cnc">
 
-       <img class="cncimg"  src="\images\cnc.jpg" alt="">
+       <img class="cncimg" loading="lazy" src="\images\cnc.jpg" alt="">
 <div class="flexmore">
   <h2>CNC..</h2>
   <p>
@@ -186,7 +187,7 @@
        <hr>
        <div id="cnc">
 
-       <img class="bedrooms"  src="\images\cnc.jpg" alt="">
+       <img class="bedrooms" loading="lazy" src="\images\cnc.jpg" alt="">
 <div class="flexmore">
   <h2>CNC..</h2>
   <p>
@@ -200,7 +201,7 @@
 
 
        </div>
-       <img src="\images\mountain.png" style="margin:-100px;   opacity:0.8" alt="">
+       <img src="\images\mountain.png" loading="lazy"style="margin:-100px;   opacity:0.8" alt="">
 
 
        </div>
