--- a/views/test.ejs
+++ b/views/test.ejs
@@ -71,7 +71,7 @@
 
 
        <section class="home">
-         <img class="home" src="\images\albaradie.jpg" loading="lazy"  height="300px"alt="">
+         <img class="home" src="\images\albaradie.jpg" loading="lazy"   height="700px" alt="">
 
        </section>
 
@@ -86,10 +86,10 @@
                      <div class="row" >
                        <div class="column ">
                          <img src="\images\albaradie.jpg" loading="lazy" class="imgleft d-block w-100" alt="...">
-                         <img class="imgleft d-block" loading="lazy" src="\images\aboutusbackground.jpg" alt="Snow" style="width:100%">
+                         <!-- <img class="imgleft d-block" loading="lazy" src="\images\aboutusbackground.jpg" alt="Snow" style="width:100%"> -->
                        </div>
                        <div class="column">
-                 <h1> أحود أنواع خشب الزان </h1>
+                 <h2> أحود أنواع خشب الزان </h2>
                  </div>
 
                      </div>
