--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -13,6 +13,14 @@ img[class="home"]{
 width: 60%;
 }
 
+
+@media (max-width:990px) {
+  img[class="home"]{
+  width: 100%;
+  height: 1000px;
+
+  }
+}
 img{
   width: 100%;
 }
@@ -365,7 +373,7 @@ font-size: 1.5vw;
 }
 h2{
 font-size: 3vw;
-
+color: white;
 }
 
 h3
@@ -386,7 +394,8 @@ h3
   }
 p{
   text-shadow: #000000 1px 0 10px;
-
+color: white;
+opacity:0.7;
 
 }
 
@@ -424,7 +433,7 @@ color: white;
 .imgleft{
 padding: 10px;
 /* width: 40%; */
-height:700px;
+height:400px;
 background-position: center;
 object-fit: cover;
 
@@ -462,8 +471,8 @@ vertical-align: middle;
   display: table;
 }
 .row {
-  display: flex;
-
+  /* display: flex; */
+display: block;
 
 }
 
