--- a/views/test2.ejs
+++ b/views/test2.ejs
@@ -90,7 +90,7 @@ document.body.style.backgroundImage = "url('file:///C:/Users/MSI/baradie/public/
 </div> -->
 
 
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleControls" class="carousel " data-ride="carousel">
       <div class="carousel-inner" >
 <% for (var i=0;i<sec.items.length;i++){%>
         <div
