--- a/views/test2.ejs
+++ b/views/test2.ejs
@@ -90,7 +90,7 @@ document.body.style.backgroundImage = "url('file:///C:/Users/MSI/baradie/public/
 </div> -->
 
 
-    <div id="carouselExampleControls" class="carousel " data-ride="carousel">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="false">
       <div class="carousel-inner" >
 <% for (var i=0;i<sec.items.length;i++){%>
         <div
@@ -217,16 +217,11 @@ class="carousel-item"
 
           <% for (var j=1;j<sec.items[i].images.length;j++){%>
 <%var cl="groub"+i;%>
-       <li><img src="<%=sec.items[i].images[j]%>" class="slidesimg <%=cl%>"width="250px" loading="lazy" style="height:150px;" alt="UP" onload="initMyFunction(this);"/></li>
+       <li><img src="<%=sec.items[i].images[j]%>" class="slidesimg <%=cl%>"width="250px" loading="lazy" style="height:150px;" alt="UP" /></li>
        <%}%>
 
 
 
-        <% if (i===0){%>
-                class="carousel-item active " <%}%>
-        <%if (i!==0){%>
-        class="carousel-item"
-        <%}%>
         <%}%>
 
 
