--- a/views/test.ejs
+++ b/views/test.ejs
@@ -71,8 +71,11 @@
 
 
        <section class="home">
-         <img class="home" src="\images\albaradie.jpg" loading="lazy"   height="700px" alt="">
+         <h1>شركة البرادعي للمفروشات</h1>
 
+         <img class="home" src="\images\albaradie-home.png" loading="lazy"   height="700px" alt="">
+
+<img src="\images\albaradie4.jpg" alt="">
        </section>
 
 
@@ -208,23 +211,53 @@
 
 
        <div id="aboutus"class="Whataboutus ">
-         <h1>What do you know about us</h1>
 
-       <p>
 
-       <br>
-       <br>
+           <h1>What do you know about us</h1>
 
-         <i>abo faisal and yara </i> are the most awesome in this awful world i miss christmis this year
+         <p>
+
          <br>
-       cristiano ronaldo is the best player in the wordl
-       <br>
-       i love u so much
-       <br>
-       we areee the champoioooooooooons
+         <br>
 
-       </p>
+           <i>abo faisal and yara </i> are the most awesome in this awful world i miss christmis this year
+           <br>
+         cristiano ronaldo is the best player in the wordl
+         <br>
+         i love u so much
+         <br>
+         we areee the champoioooooooooons
+
+         </p>
+
+
+
+
+
        </div>
+
+
+
+       </div>
+
+
+
+<div id="communication">
+
+<div class="contactus">
+<h3>Contact us</h3>
+</div>
+
+<div class="sections">
+<h2>أفرعنا </h2>
+<ul>
+  <li>دير عطية-مول</li>
+  <li>يبرود-السوقالرئيسي</li>
+</ul>
+
+</div>
+
+
 
 
 
@@ -232,6 +265,11 @@
 
        <h6>© HamoudyElbasha</h6>
        </div>
+
+</div>
+
+
+
 
 
 
