--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -6,18 +6,34 @@ width: 100%;
 height: 100%;
 text-align: center;
   box-sizing: border-box;
-  background-color: black;
+  /* background-color: black; */
 background-image: linear-gradient(0deg, rgba(0,0,0,0.8), rgba(0,0,0,0.8)),url("/images/blackimage.jpg");
 }
 img[class="home"]{
 width: 60%;
+margin: -50px;
+height: 600px;
+z-index: -4;
+position: relative;
 }
+ .home h1{
+   position: relative;
+   z-index: 4;
+  font-family: "Lucida Bright", Georgia, serif;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 100;
+    font-size: 6vw;
+    display: block;
+    color: white;
+}
+
 
 
 @media (max-width:990px) {
   img[class="home"]{
-  width: 100%;
-  height: 1000px;
+  width: 80%;
+  height: 600px;
 
   }
 }
@@ -166,11 +182,11 @@ margin: auto;
 }
 .home{
 
-padding: 0px;
-padding-top:  20px;
+
+padding:  100px 0px;
 
 background-color: linear-gradient(0deg, rgba(0,0,0,1), rgba(0,0,0,1));
-background-color: black;
+/* background-color: black; */
 size: cover;
 width:100%;
 
@@ -364,6 +380,7 @@ font-size:1.8em;
 h1{
 
   font-size: 4vw;
+  color: white;
 }
 
 
@@ -376,12 +393,49 @@ font-size: 3vw;
 color: white;
 }
 
+.Whataboutus{
+  position: relative;
+  padding :10% 0%;
+
+
+}
+
+#communication{
+  position: relative;
+  background: rgb(80,80,80);
+  background: linear-gradient(90deg, rgba(80,80,80,0.6113795860140931) 1%, rgba(131,131,131,1) 100%, rgba(239,226,226,1) 100%);
+z-index: -2;
+height: 450px;
+}
+.contactus{
+
+  height: 300px;
+  width: 220px;
+
+  border-top-left-radius: 10%;
+  border-bottom-right-radius:  10%;
+text-align: center;
+  position:absolute;
+top: 10%;
+  right:10%;
+  background: rgb(42,40,40);
+  background: linear-gradient(90deg, rgba(42,40,40,1) 25%, rgba(80,80,80,0.6113795860140931) 91%, rgba(239,226,226,1) 100%);}
+
+.sections{
+text-align: center;
+  position:absolute;
+  top: 10%;
+  left:20%;
+
+
+}
+
+
 h3
 .Whataboutus{
 
 
   text-align: center;
-
   width: 100%;
   background-size: contain;
     overflow-y: auto;
@@ -416,7 +470,7 @@ opacity:0.7;
            /* width: 100%; */
          }
        }
-h1{
+#super h1,#newcollection h1{
   animation-duration: 3s;
   animation-name: carouselanimation;
   animation-iteration-count: infinite;
@@ -427,9 +481,10 @@ text-align: center;
 justify-content: center;
 display: flex;
 align-self: center;
-padding-top: 20%;
+/* padding-top: 20%; */
 color: white;
 }
+
 .imgleft{
 padding: 10px;
 /* width: 40%; */
@@ -510,11 +565,12 @@ bottom: 0px;
 
 }
 .footer{
-  position: relative;
+  position: absolute;
   color: white;
-  background-color:#e3dfc8;
+  bottom: 10px;
+  /* background-color:#e3dfc8; */
   text-align: center;
-  padding :0.7rem;
-  margin-top: 2rem;
+  /* padding :0.7rem;
+  margin-top: 2rem; */
 width: 100%;
 }
