--- a/views/test2.ejs
+++ b/views/test2.ejs
@@ -118,7 +118,7 @@ class="carousel-item"
 
 
     <tr>
-      <td> <h5><%=sec.items[i].quality%></h5>  </td>
+      <td> <h4><%=sec.items[i].quality%></h4>  </td>
       <td><h4>:الجودة</h4> </td>
 
     </tr>
@@ -128,16 +128,39 @@ class="carousel-item"
 </td>
 <td><h4>:الوصف</h4> </td>
 
-    </tr>
-
-    <tr>
-
-  <td>
 
 
     </tr>
+
+
+
+
+    <tr >
+        <td>  <h5> <%=sec.items[i].price%></h5>
+  </td>
+  <td><h4>:السعر</h4> </td>
+
+      </tr>
+
+      <tr >
+          <td>  <h5> <%=sec.items[i].disaccount%></h5>
+    </td>
+    <td><h4>:الخصم</h4> </td>
+
+
+
+        </tr>
+
+        <tr >
+            <td>  <h5> <%=sec.items[i].bonus%></h5>
+      </td>
+      <td><h4>:bonus</h4> </td>
+
+
+
+          </tr>
   </table>
-  <a href="#gallery" class="u-btn u-button-style u-palette-3-base u-btn-1"onclick="displayGallery2();" > more</a></td>
+  <a href="#gallery" class="u-btn u-button-style u-palette-3-base u-btn-1"onclick="displayGallery2();" > Images</a></td>
 
 </div>
 
